--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,7 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
+    implementation 'com.google.code.gson:gson:2.9.0'
+
 
 }
